tests/macros/multi_select/default.rs
fn main() {
    requestty::questions![MultiSelect { default: todo!() }];
}
